--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "babelify": "~7.2.0",
     "browserify": "~4.2.0",
     "gulp": "~3.9.0",
+    "gulp-less": "^3.0.5",
+    "gulp-minify-css": "^1.2.4",
     "gulp-notify": "~1.4.0",
     "gulp-util": "~2.2.19",
     "react": "~0.14.8",
